# imu_ahrs

./: CMakeLists.txt  README.md  package.xml  simple_example.py
Fusion/: FusionMath.h
Fusion/xioTechno_test/: CMakeLists(C++).txt  xio_test.cpp  xio_test.py
imu_pose_estimator/: CMakeLists.txt  package.xml
imu_pose_estimator/launch/: rgb_driver.launch
imu_pose_estimator/src/: main.cpp
launch/: rviz.rviz
src/: estimate_orientation.cpp
